Se quitan lineas de prueba

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/alert.css">
 </head>
 
-<!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VF5RD3YQ4P"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
@@ -34,7 +34,7 @@
 
     gtag('config', 'G-VF5RD3YQ4P');
 </script>
-
+-->
 <body>
     <main>
         <section class="information">
