Carga de blog web-agent

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     Elipticnet
                 </h1>
                 <h2> Easy online monitoring</h2>
-                <h3> Beta available: <span> March, 2025 </span></h3>
+                <h3> Early access: <span> March, 2025 </span></h3>
             </section>
             <section class="register-form">
                 <form class="email-form">
