Correccion de meta tags y robots

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <meta name="author" content="Elipticnet">
     
     <!-- SEO Meta Tags -->
-    <meta name="robots" content="index, follow">
-    <meta name="robots" content="noarchive">
-    
+    <meta name="robots" content="index, follow, noarchive">
+    <link rel="canonical" href="https://elipticnet.com/" />
+
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
     <meta property="og:title" content="Elipticnet - Website & Service Monitoring (Coming Soon)">
