--- a/web-uptime.html
+++ b/web-uptime.html
@@ -21,7 +21,9 @@
     <meta name="keywords"
         content="UptimeRobot alternative, Uptime Kuma alternative, website monitoring, server monitoring, uptime monitoring, API monitoring, Elipticnet, early access">
     <meta name="author" content="Elipticnet">
-    <meta name="robots" content="index, follow">
+    
+    <meta name="robots" content="index, follow, noarchive">
+
 
     <meta property="og:title" content="Elipticnet – An Alternative to UptimeRobot and Uptime Kuma (Early Access)">
     <meta property="og:description"
