web de agente ping

--- a/ping-uptime-monitoring.html
+++ b/ping-uptime-monitoring.html
@@ -17,33 +17,31 @@
 
     <!--Others-->
     <meta name="description"
-        content="Looking for an alternative to UptimeRobot or Uptime Kuma? Elipticnet is coming soon! Join our early access list and be among the first to try it.">
+        content="Elipticnet is an easy-to-use and affordable alternative to UptimeRobot and Uptime Kuma. Monitor your website, server, or API uptime with no installation required. Join our early access list today.">
     <meta name="keywords"
-        content="UptimeRobot alternative, Uptime Kuma alternative, website monitoring, server monitoring, uptime monitoring, API monitoring, Elipticnet, early access">
+        content="UptimeRobot alternative, Uptime Kuma alternative, website monitoring, server monitoring, uptime monitoring, API monitoring, Elipticnet, early access, monitoring tool, no installation, network monitoring">
     <meta name="author" content="Elipticnet">
-    
+
     <meta name="robots" content="index, follow, noarchive">
 
-
-    <meta property="og:title" content="Elipticnet – An Alternative to UptimeRobot and Uptime Kuma (Early Access)">
+    <meta property="og:title" content="Elipticnet – A Simple Alternative to UptimeRobot and Uptime Kuma (Early Access)">
     <meta property="og:description"
-        content="A new uptime monitoring solution is coming soon! Join the early access list and be the first to test Elipticnet.">
+        content="Discover Elipticnet, the easy-to-use and affordable uptime monitoring solution. Sign up for early access and start monitoring your site without installation.">
     <meta property="og:image" content="https://elipticnet.com/assets/preview.jpg">
     <meta property="og:url" content="https://elipticnet.com">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Elipticnet – A UptimeRobot & Uptime Kuma Alternative (Early Access)">
+    <meta name="twitter:title" content="Elipticnet – A Simple Uptime Monitoring Solution (Early Access)">
     <meta name="twitter:description"
-        content="A powerful monitoring tool is launching soon! Join our early access list and be the first to try it.">
+        content="Elipticnet is launching soon. Get early access to the best uptime monitoring tool that’s easy, fast, and affordable.">
     <meta name="twitter:image" content="https://elipticnet.com/assets/preview.jpg">
-    <title>Elipticnet – A New Uptime Monitoring Alternative (Early Access)</title>
+    <title>Elipticnet – Affordable & Easy-to-Use Uptime Monitoring Alternative (Early Access)</title>
 
     <!-- Styles -->
-
     <link rel="stylesheet" href="css/palette.css">
     <link rel="stylesheet" href="css/web-uptime.css">
     <link rel="stylesheet" href="css/alert.css">
-
 </head>
+
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VF5RD3YQ4P"></script>
 <script>
@@ -57,7 +55,7 @@
 <body>
     <main>
         <header id="joinNow" class="title">
-            <h1>Monitor Your Website
+            <h1>Monitor Your Network
             </h1>
             <h1> Without High Costs</h1>
             <div class="coming_soon">
@@ -95,12 +93,12 @@
         </header>
         <section id="news">
             <article id="web_agent">
-                <h1>Keep Your Site Under Control</h1>
+                <h1>Keep Your Network Under Control</h1>
 
-                <p>Ensure your website stays online and running smoothly with Elipticnet Web Monitor, a smart solution
-                    that monitors your site’s status in real time.
+                <p>Ensure your servers and devices stay online and responsive with Elipticnet Ping Monitor, a smart
+                    solution that continuously tracks network performance in real time.
                 </p>
-                <h2>Our web monitoring agent continuously checks and reports on:
+                <h2>Our ping monitoring agent constantly tracks and provides detailed reports on:
                 </h2>
 
                 <ul>
@@ -109,9 +107,8 @@
                                 class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-                            </svg>Server status:</h3>
-                        <p>Detects whether your site is
-                            responding correctly.</p>
+                            </svg>Host Status:</h3>
+                        <p>Detects whether your server or device is responding to ICMP requests (ping).</p>
                     </li>
                     <li>
                         <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -119,17 +116,16 @@
                                 <path
                                     d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
                             </svg>Response time:</h3>
-                        <p> Measures how long it takes for your
-                            website to load.</p>
+                        <p> Measures the round-trip time (RTT) for a ping request to be answered.</p>
                     </li>
                     <li>
                         <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-                            </svg>TTFB (Time to First Byte):</h3>
-                        <p> Tracks the delay
-                            between the request and the first byte received from the server.</p>
+                            </svg>Latency Threshold:</h3>
+                        <p> Set a custom latency threshold to receive alerts when response times exceed acceptable
+                            limits.</p>
                     </li>
                     <li>
                         <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
@@ -137,17 +133,16 @@
                                 <path
                                     d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
                             </svg>Uptime:</h3>
-                        <p> Logs how long your website remains
-                            accessible without interruptions.</p>
+                        <p> Logs how long your host remains reachable without interruptions.</p>
                     </li>
                     <li>
                         <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                                 <path
                                     d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
-                            </svg>Content size:</h3>
-                        <p> Detects unexpected changes in your
-                            page’s content.</p>
+                            </svg>Latency Stability:</h3>
+                        <p> Monitors fluctuations in response times to detect potential network congestion or
+                            performance issues.</p>
                     </li>
                 </ul>
 
